<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/scrollview"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:isScrollContainer="true"
    android:fillViewport="true"
    android:background="@color/white">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/MyMaterialTheme" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/friend_id"
        android:hint="@string/register_user_id"
        android:textColor="@color/android_grey"
        android:textColorHint="@color/clouds"
        android:textSize="25sp"
        android:maxLines="1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="false" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/invite_button_text"
        android:id="@+id/add_friend_btn"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner_button"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/friend_id"
        android:layout_height="55dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_text_part_1"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"
        android:layout_above="@+id/friend_id"
        android:layout_marginBottom="80dp" />

</RelativeLayout>
</ScrollView>