<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:elevation="3dp"
        android:src="@drawable/user_perm_card" />


    <ImageView
        android:id="@+id/user_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@drawable/user_image_card_effect"
        android:scaleType="fitStart"
        android:src="@drawable/default_user" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignTop="@+id/imageView"
        android:elevation="6dp"
        android:orientation="horizontal">


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"></FrameLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:elevation="16dp"
                android:gravity="top"
                android:orientation="vertical"
                android:layout_marginTop="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="20dp"
                    android:layout_marginTop="0dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="20dp">

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="6dp"
                            android:text="User_name"
                            android:textColor="@color/white"
                            android:textSize="18sp" />


                    </RelativeLayout>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name"
                    android:layout_gravity="left"
                    android:layout_marginTop="0dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="6dp"
                        android:text="@string/perm_allowed_Text"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <!--<ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/perm_locations"
                        android:layout_toRightOf="@+id/textView8"
                        android:src="@drawable/perm_locations_active"
                        android:adjustViewBounds="true"
                        android:layout_alignTop="@+id/textView8"
                        android:layout_marginLeft="10dp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/perm_camera"
                        android:src="@drawable/perm_camera_active"
                        android:adjustViewBounds="true"
                        android:layout_alignTop="@+id/perm_locations"
                        android:layout_toRightOf="@+id/perm_locations"
                        android:layout_toEndOf="@+id/perm_locations"
                        android:layout_marginLeft="10dp" />-->


                </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/perm_locations"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:maxWidth="20dp"
                            android:layout_weight="2"
                            android:adjustViewBounds="true"
                            android:src="@drawable/perm_locations_active"
                            android:baselineAlignBottom="false"
                            android:layout_gravity="center_vertical" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/perm_location"
                            android:textColor="@color/white"
                            android:textSize="13dp"
                            android:layout_marginLeft="10dp" />

                        <Switch
                            android:id="@+id/perm_location_switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:layout_marginLeft="40dp" />





                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/perm_camera"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:maxWidth="20dp"
                            android:layout_weight="2"
                            android:adjustViewBounds="true"
                            android:src="@drawable/perm_camera_active"
                            android:baselineAlignBottom="false"
                            android:layout_gravity="center_vertical" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/perm_camera"
                            android:textColor="@color/white"
                            android:textSize="13dp"
                            android:layout_marginLeft="10dp" />

                        <Switch
                            android:id="@+id/perm_camera_switch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:layout_marginLeft="40dp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>